Refactorización incidencias SonarQube: Fase 1
AP-author: https://masto.nobigtech.es/@juanro49